本文、カラー変更

--- a/index.html
+++ b/index.html
@@ -17,23 +17,26 @@
 
   <link rel="stylesheet" href="index.css"/>
 </head>
-<body>
+<body　style="background:rgb(200,200,50);">
   <div class=header>
+   
     <h1>アーンパーンチ</h1>
-    <div>せつめいせつめい</div>
+    <div>バイキンマンをやっつけよう</div>
   </div>
   <div class=main>
     <div>
-      <h2>さぶたいとる１</h2>
+      <h2>アンパンマンとうじょう！</h2>
       <div>
-        ほんぶん１
+        よわいものをいじめるな！
+        そんなやつらはおれがぶっとばぁぁぁぁぁっす！！
       </div>
     </div>
 
     <div>
-      <h2>さぶたいとる２</h2>
+      <h2>彼はアンパンマンなのか</h2>
       <div>
-        ほんぶん２
+        カバオくん曰く、バイキンマンをワンパンしたらしい。秒殺。
+        果たして奴は本当にアンパンマンなのだろうか。
       </div>
     </div>
   </div>
