--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   
 <body　style="background:rgb(200,200,50);">
   <div class=header>
-   
+   <img scr="おなのこ３.png">
     <h1>アーンパーンチ</h1>
     <div>バイキンマンをやっつけよう</div>
   </div>
